jira/jira-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jira
spec:
  selector:
    matchLabels:
      app: jira # has to match .spec.template.metadata.labels
  serviceName: "jira"
  replicas: 3 # by default is 1
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app: jira # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: jira-8201
        image: jira:8.20.1
        ports:
        - containerPort: 8080
          name: jira
        volumeMounts:
        - name: jira
          mountPath: /var/atlassian/application-data/jira
  volumeClaimTemplates:
  - metadata:
      name: jira
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "example-sc"
      resources:
        requests:
          storage: 10Gi
