jira/jira-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira
  labels:
    app: jira
  namespace: atlassian
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8080
  selector:
    app: jira
