jira/jira-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jira
  namespace: atlassian
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - jira.omdgrp.ir
    secretName: jira-cert
  rules:
  - host: "jira.test.ir"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jira
            port:
              number: 80
